Long review text overflow fixed

--- a/public/css/show_user/show-user.css
+++ b/public/css/show_user/show-user.css
@@ -6,5 +6,8 @@ div.review {
   background-color: #7ABEF5;
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right:30px;
   border-radius: 5px;
+  word-wrap: break-word;
 }
